tests/golden/errors/uppercase_identifier.kso
fn main
  myName = 1
  print "{myName}"
