tests/golden/errors/uppercase_identifier.stderr
error[formatting]: identifiers are snake_case, all lowercase, always
  --> uppercase_identifier.kso:2:5
   2 |   myName = 1
           ^
error[formatting]: identifiers are snake_case, all lowercase, always
  --> uppercase_identifier.kso:3:13
   3 |   print "{myName}"
                   ^
